fix: wrap list of filter selections

--- a/components/FilterMenu/FilterSelections.module.scss
+++ b/components/FilterMenu/FilterSelections.module.scss
@@ -3,6 +3,7 @@
 
 .filterMenuSelections {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 1em;
   padding-left: 0;
   list-style: none;
